# dockerfiler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
dockerfiler/: .env.example  cli.py  config.py  data.py  main.py
dockerfiler/projects/: __init__.py  params.py  utils.py
dockerfiler/projects/base/: _dockerfiler.j2  _params.py  ignore.j2
dockerfiler/projects/django_uv/: __init__.py  django_uv.j2  dockerfiler.j2  ignore.j2  params.py
dockerfiler/projects/django_uv/tailwind/: __init__.py  django_uv_tailwind.j2  dockerfiler.j2  ignore.j2  params.py
dockerfiler/projects/fastapi_uv/: __init__.py  dockerfiler.j2  fastapi_uv.j2  ignore.j2  params.py
dockerfiler/projects/quarto_website/: __init__.py  dockerfiler.j2  ignore.j2  params.py
dockerfiler/projects/streamlit_uv/: __init__.py  dockerfiler.j2  ignore.j2  params.py
dockerfiler/projects/uv_base/: __init__.py  dockerfiler.j2  ignore.j2  params.py  uv_base.j2
dockerfiler/templates/: base.j2  django_tailwind_uv.j2  django_uv.j2  fastapi_uv.j2  uv_base.j2
