[project]
name = "dockerfiler"
version = "0.1"
description = "Generate Dockerfiles interactively from templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "inquirerpy>=0.3.4",
    "jinja2>=3.1.6",
    "questionary>=2.1.1",
]

[project.scripts]
dockerfiler = "dockerfiler.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dockerfiler*"]

[tool.setuptools.package-data]
dockerfiler = ["templates/*.j2"]