[project]
name = "dockerfiler"
version = "0.5"
description = "Generate Dockerfiles interactively from templates"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Naïm Saadi", email = "nsaadig16@gmail.com" }
]

dependencies = [
    "dotenv>=0.9.9",
    "inquirerpy>=0.3.4",
    "jinja2>=3.1.6",
    "questionary>=2.1.1",
    "rich>=14.3.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
dockerfiler = "dockerfiler.main:main"

[project.urls]
Repository = "https://github.com/nsaadig16/dockerfiler"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dockerfiler*"]

[tool.setuptools.package-data]
dockerfiler = ["templates/*.j2"]
